@@ -32,11 +32,6 @@ MODx.loadWelcomePanel = function(url) {
         ,modal: true
         ,layout: 'fit'
         ,html: '<iframe onload="parent.MODx.helpWindow.getEl().unmask();" src="' + url + '" width="100%" height="100%" frameborder="0"></iframe>'
-        ,listeners: {
-            show: function(o) {
-                o.getEl().mask(_('help_loading'));
-            }
-        }
     });
     MODx.helpWindow.show(Ext.getBody());
 };
