@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- Prevent bug that causes modal to overlap welcome screen
 - Allow non-empty responses to OnBeforeTVFormSave to prevent save
 - [#MODX-2201] Ensure MODX_PROCESSORS_PATH is upgraded correctly on upgrades where the core is moved
 - [#MODX-2323] Allow non-empty responses to OnBeforeDocFormSave to prevent save
